# rsteam

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
examples/: README.md  convert_to_id3.rs  get_steamid.rs  list_banned_friends.rs  player_info.rs
src/: client.rs  error.rs  lib.rs  macros.rs  steam_id.rs  utils.rs
src/legacy/: get_group_summary.rs  list_group_members.rs  mod.rs
src/player_service/: get_badges.rs  get_community_badge_progress.rs  get_owned_games.rs  get_recently_played_games.rs  get_steam_level.rs  is_playing_shared_game.rs  mod.rs
src/steam_apps/: get_app_list.rs  mod.rs
src/steam_news/: get_news_for_app.rs  mod.rs
src/steam_user/: get_friend_list.rs  get_player_bans.rs  get_player_summaries.rs  get_user_group_list.rs  mod.rs  resolve_vanity_url.rs
src/steam_user_stats/: get_global_achievement_percentages_for_app.rs  get_number_of_current_players.rs  get_player_achievements.rs  get_schema_for_game.rs  get_user_stats_for_game.rs  mod.rs
